--- a/code/poa/src/main/resources/i18n/messages.properties
+++ b/code/poa/src/main/resources/i18n/messages.properties
@@ -4,3 +4,4 @@ poa.delete.dept.error=\u5220\u9664\u7EC4\u7EC7\u4FE1\u606F\u65F6\u53D1\u751F\u95
 poa.change.password.invalid.old=\u8F93\u5165\u7684\u65E7\u5BC6\u7801\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\u3002
 poa.delete.code.error=\u5220\u9664\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
 poa.search.code.error=\u68C0\u7D22\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
+poa.save.code.error=\u4FDD\u5B58\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
