--- a/code/poa/src/main/resources/i18n/messages.properties
+++ b/code/poa/src/main/resources/i18n/messages.properties
@@ -1,7 +1,27 @@
-poa.save.dept.error=\u4FDD\u5B58\u7EC4\u7EC7\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
+poa.server.error=\u670D\u52A1\u7AEF\u5904\u7406\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
 poa.delete.dept.hasChildren=\u8BE5\u7EC4\u7EC7\u4E0B\u6709\u5B50\u7EC4\u7EC7\u5B58\u5728\uFF0C\u65E0\u6CD5\u5220\u9664\u3002
-poa.delete.dept.error=\u5220\u9664\u7EC4\u7EC7\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
 poa.change.password.invalid.old=\u8F93\u5165\u7684\u65E7\u5BC6\u7801\u4E0D\u6B63\u786E\uFF0C\u8BF7\u91CD\u65B0\u8F93\u5165\u3002
-poa.delete.code.error=\u5220\u9664\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
-poa.search.code.error=\u68C0\u7D22\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
-poa.save.code.error=\u4FDD\u5B58\u6A21\u5757\u4FE1\u606F\u65F6\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u91CD\u8BD5\u6216\u8005\u8054\u7CFB\u7BA1\u7406\u5458\u3002
+# logging
+poa.server.log.start={0} - \u5904\u7406\u5F00\u59CB\u3002
+poa.server.log.end={0} - \u5904\u7406\u7ED3\u675F\u3002
+# \u6A21\u5757\u7BA1\u7406
+poa.code.search=\u6A21\u5757\u6570\u636E\u68C0\u7D22
+poa.code.getAllType=\u83B7\u53D6\u6240\u6709\u6A21\u5757\u7C7B\u578B
+poa.code.delete=\u5220\u9664\u6A21\u5757\u6570\u636E
+poa.code.save=\u4FDD\u5B58\u6A21\u5757\u6570\u636E
+
+#\u7EC4\u7EC7\u7BA1\u7406
+poa.dept.sub=\u83B7\u53D6\u4E0B\u4F4D\u7EC4\u7EC7
+poa.dept.save=\u4FDD\u5B58\u7EC4\u7EC7\u6570\u636E
+poa.dept.delete=\u5220\u9664\u7EC4\u7EC7\u6570\u636E
+poa.dept.getManagers=\u83B7\u53D6\u7EC4\u7EC7\u8D1F\u8D23\u4EBA
+
+#\u4EBA\u5458\u7BA1\u7406
+poa.user.search=\u4EBA\u5458\u6570\u636E\u68C0\u7D22
+poa.user.save=\u4FDD\u5B58\u4EBA\u5458\u4FE1\u606F
+poa.user.delete=\u5220\u9664\u4EBA\u5458\u4FE1\u606F
+poa.user.getDepts=\u83B7\u53D6\u7EC4\u7EC7\u4FE1\u606F
+
+#\u8BBE\u7F6E
+poa.setting.changePassword=\u4FEE\u6539\u5BC6\u7801
+poa.setting.updateProfile=\u4FEE\u6539\u4E2A\u4EBA\u8D44\u6599
